Correction mobile

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -150,7 +150,7 @@ button:hover {
     display: flex;
 }
 
-#about-luca p{
+#about-flavour{
     width: 60%;
     font-size: 1.4rem;
     justify-content: center;
@@ -158,10 +158,17 @@ button:hover {
     margin: auto;
 }
 
-#about-luca img {
+#about-picture {
     width: 30%;
     border-radius: 50%;
 }
+
+#about-picture img {
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    border-radius: 50%;
+}
+
 
 .skills-container {
     border-radius: 10px;
@@ -244,10 +251,20 @@ input {
     .spotify-playlist {
         width: 90%;
     }
+
+    .about-luca {
+        display: block;
+        flex-direction: row;
+    }
 }
 
 @media (max-width: 772px) {
     .project-card {
         width: 100%;
+    }
+
+    .about-luca {
+        display: block;
+        flex-direction: row;
     }
 }
